--- a/assets/www/starark/index.html
+++ b/assets/www/starark/index.html
@@ -7,8 +7,70 @@
         <title>验证码接入示例</title>
     </head>
     <body>
-        <script src="js/load.min.js"></script>
-        <script src="js/md5.min.js"></script>
-        <script src="js/array.js"></script>
+    <script src="gt4.js"></script>
+    <script src="md5.min.js"></script>
+    <script src="array.js"></script>
+    <script>
+            const showLoginCaptcha = () => {
+                initGeetest4({
+                    protocol: 'https://',
+                    captchaId: '714ae136a3e16a0808e7d569290734d6',
+                    product: 'bind'
+                },  (_captchaObj) => {
+                    _captchaObj.showCaptcha();
+                    _captchaObj.onSuccess(() => {
+                        const validate = _captchaObj.getValidate()
+                        Jio.postMessage(JSON.stringify({
+                          code: 1,
+                          data: validate
+                        }));
+                    });
+                    _captchaObj.onError((error) => {
+                      console.log(error)
+                    });
+                    _captchaObj.onClose((error) => {
+                      console.log(error)
+                    });
+                })
+            }
+            const showBuyCaptcha = () => {
+                initGeetest4({
+                    protocol: 'https://',
+                    captchaId: 'e840dc850cfe9c6f7e5c3ef115110b2c',
+                    product: 'bind'
+                },  (_captchaObj) => {
+                    _captchaObj.showCaptcha();
+                    _captchaObj.onSuccess(() => {
+                        const validate = _captchaObj.getValidate()
+                        Jio.postMessage(JSON.stringify({
+                          code: 1,
+                          data: validate
+                        }));
+                    });
+                    _captchaObj.onError((error) => {
+                      console.log(error)
+                    });
+                    _captchaObj.onClose((error) => {
+                      console.log(error)
+                    });
+                })
+            }
+
+            const getT = () => JSON.stringify({ data: Date.parse(new Date()) })
+
+            const getSign = ({ t }) => JSON.stringify({ data: GridItems(t) })
+
+            const getLoginToken = ({ cookie }) => {
+                const cookieMap = cookie.split(";")
+                for (const item of cookieMap) {
+                    const keyValue = item.split("=");
+                    if (keyValue[0] == 'user') {
+                        const data = JSON.parse(decodeURIComponent(keyValue[1]))
+                        return JSON.stringify({ data: data["login_token"] })
+                    }
+                }
+            }
+
+    </script>
     </body>
 </html>
